@@ -159,7 +159,8 @@ sub make_page
 
 	$page->appendChild( $session->html_phrase( 
 		"cgi/set_password:mail_sent",
-		email=>$session->make_text( $email ) ) );
+		email=>$session->make_text( $email ),
+		maxdelta => $session->make_text( $maxdelta ) ) );
 	return( $page, $title );
 }
 
