@@ -5952,3 +5952,7 @@ PACKAGE: 2.2.99.2
 2006-12-11 cjg
  * Added generate_static, import_subjects and generate_apacheconf to 
     epadmin create and erase_data
+
+2006-12-11 moj
+ * Added maxdelta to password change mail_sent phrase
+ * Changed confirmation email to put link around 'active password'.
